# Quantitative-Framework-for-Firm-Valuation-Multiples-Computation

./: .gitignore  README.md  config.yaml  environment.yml  pyproject.toml
data/00_raw/: 12_Industry_Portfolios_Daily.xlsx  T5YIE.csv  sic_industrial_and_commercial_machinery_and_computer_equipment.xlsx  ~$sic_industrial_and_commercial_machinery_and_computer_equipment.xlsx
data/10_draft_processing/: Volatility_Index.csv  encoded_business_descriptions_with_pca.xlsx  financial_features_to_analyse.xlsx
data/30_prod/: inflation_rates.csv  sentiment_analysis.csv
models/: business_description_encoding_and_pca.ipynb
models/.ipynb_checkpoints/: financial_features_analysis-checkpoint.ipynb  multiples_modeling_with_business_descriptions-checkpoint.ipynb
models/include_sentiment_analysis/CNN/2018-2020/: training.py
models/include_sentiment_analysis/RNN/2016-2017/: training.py
models/include_sentiment_analysis/RNN/2018-2020/: training.py
models/multiples computation models via ML/: multiples_modeling_with_sic_code.ipynb
models/not_include_sentiment_analysis/CNN/2016-2017/: training.py
models/not_include_sentiment_analysis/CNN/2018-2020/: training.py
models/not_include_sentiment_analysis/RNN/2016-2017/: training.py
models/not_include_sentiment_analysis/RNN/2018-2020/: training.py
notebooks/: 00_FRED.ipynb  01_Dataset_Preparation.ipynb  02_Sentiment_Analysis.ipynb  03_Features.ipynb
src/backtest/: schemas.py
src/log/: log.py  models.py
src/portfolio/benchmark/: models.py  performance.py
src/portfolio/datasets/: loader.py  schemas.py
src/portfolio/datasets/bloomberg/: asset.py  models.py  schemas.py
src/portfolio/datasets/yahoo_finance/: asset.py  models.py  quote.py  schemas.py
src/portfolio/optimisation/: markowitz.py  schemas.py
src/utils/: models.py  settings.py  utils.py
