[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "Bachelor-Thesis"
description = ""
authors = [
  { name = "Mario Nicolò De Matteis", email = "marionicdematteis@gmail.com" },
]
maintainers = [
  { name = "Mario Nicolò De Matteis", email = "marionicdematteis@gmail.com" },
]
readme = "README.md"
requires-python = ">=3.11,<3.12"
dynamic=["version"]
keywords = [
]
classifiers = [
]

dependencies = [
    "beartype==0.17.2",
    "GNews==0.3.7",
    "gymnasium==0.29.1",
    "lightning==2.2.0.post0",
    "matplotlib==3.8.3",
    "newspaper3k==0.2.8",
    "numpy==1.26.4",
    "omegaconf==2.3.0",
    "openpyxl==3.1.2",
    "pandas==2.2.0",
    "pyarrow==15.0.0",
    "pyportfolioopt==1.5.5",
    "pyyaml==6.0.1",
    "scipy==1.12.0",
    "seaborn==0.13.2",
    "silence_tensorflow==1.2.1",
    "stable_baselines3==2.2.1",
    "tensorflow==2.15.0",
    "tensorflow-probability==0.23.0",
    "tf-agents==0.19.0",
    "tf-keras==2.15.0",
    "torch>=2.1.0,<2.2.0",
    "torchmetrics==1.3.1",
    "torchvision==0.16.2",
    "transformers==4.40.2",
    "yfinance==0.2.37",
]

[project.optional-dependencies]
dev = [
  "black",
  "flake8",
  "isort",
  "pre-commit",
  "pytest",
  "pytest-asyncio",
  "pytest-cov",
]
docs = [
  "mkdocs",
  "mkdocs-material",
  "mkdocstrings[python]",
  "pytkdocs[numpy-style]",
]
test = [
  "pytest",
  "pytest-asyncio",
  "pytest-cov",
]

[project.urls]
Repository = "https://github.com/BopaxDev/Bachelor-Thesis"

[tool.black]
line-length = 88

[tool.coverage.report]
exclude_lines = ["no cov", "if __name__ == .__main__.:", "if TYPE_CHECKING:"]

[tool.coverage.run]
branch = true
parallel = true

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]